...
  <string name="AR.onboarding.common_item3_666">Each week when you meet the target, you’ll receive a spin on the wheel for a chance to win a voucher from one of our Vitality Active Rewards partners.</string>
  <string name="AR.onboarding.common_item3_heading_697">Reach Your Target</string>
  <string name="AR.onboarding.defined_item4_732">You have 30 days to choose your reward before it expires.</string>
  <string name="AR.onboarding.defined_item4_heading_733">Choose Your Reward</string>
  <string name="AR.onboarding.probabilistic_item4_698">You have 30 days to spin the wheel before your spin expires.</string>
  <string name="AR.onboarding.probabilistic_item4_heading_699">Spin the Wheel</string>
  <string name="AR.parnters.starbucks_data_privacy_title_1065">Data Privacy</string>
  <string name="AR.partners.cineworld_name_1054">Cineworld</string>
  <string name="AR.partners.cineworld_voucher_value_1056">Free Movie Tickets</string>
  <string name="AR.partners.fitbit_title_707">Fitbit</string>
  <string name="AR.partners.participating_partners_voucher_value_722">Vouchers up to $15</string>
  <string name="AR.partners.reward_title_1058">Reward</string>
  <string name="AR.partners.starbucks_1417">Starbucks</string>
...
  <string name="PM.activity_detail_section_title_559">Activity Detail</string>
  <string name="PM.alert_unable_to_update_connection_message_558">A connection error has occurred. Please make sure that you are connected to a Wi-Fi or cellular network and try again.</string>
  <string name="PM.alert_unable_to_update_message_558">An error occurred while trying to update your points. Please try again.</string>
  <string name="PM.alert_unable_to_update_points_message_558">An error occurred while trying to update your points. Please try again.</string>
  <string name="PM.alert_unable_to_update_title_557">Unable to update</string>
  <string name="PM.category_filter_all_points_title_515">All Points</string>
  <string name="PM.category_filter_assessment_title_516">Assessments</string>
  <string name="PM.category_filter_booster_points_title_520">Booster Points</string>
  <string name="PM.category_filter_fitness_title_519">Fitness</string>
  <string name="PM.category_filter_header_514">Choose Points Activity</string>
  <string name="PM.category_filter_nutrition_title_517">Nutrition</string>
  <string name="PM.category_filter_points_adjustments_title_521">Points Adjustments</string>
  <string name="PM.category_filter_pother_title_521">Other</string>
...
  <string name="profile_change_email_footerValue">This email will be used for all Vitality communications as well as login. \n\nChanging this email will not affect your email with your insurer, contact them if you would like to update it.</string>
  <string name="profile_change_email_forgot_password">Forgot Password?</string>
  <string name="profile_change_email_incorrect_password_body">The password you entered is incorrect. Please try again.</string>
  <string name="profile_change_email_incorrect_password_heading">Incorrect Password</string>
  <string name="profile_change_email_new_email_heading">New Email</string>
  <string name="profile_change_email_next">Next</string>
  <string name="profile_change_email_ok">OK</string>
  <string name="profile_change_email_password_placeholder">Password</string>
  <string name="profile_change_email_password_required_body">Enter your Vitality password to confirm the change of your email to</string>
  <string name="profile_change_email_password_required_heading">Password Required</string>
  <string name="profile_change_email_prompt_content">You’ll need to use this new email address when you next log in. Please note that this will not change the email address that is linked to your insurer.</string>
  <string name="profile_change_email_prompt_heading">Are You Sure You Want To Change Your Email?</string>
  <string name="profile_change_email_title">Change Email</string>
...
