<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/root_coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v4.widget.DrawerLayout
            android:id="@+id/activity_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <include layout="@layout/toolbar" />

            </FrameLayout>

            <android.support.design.widget.NavigationView
                android:id="@+id/navigation_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@android:color/white"
                app:headerLayout="@layout/navigation_drawer_header"
                app:menu="@menu/drawer_view" />

        </android.support.v4.widget.DrawerLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>