<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    style="@style/Toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:theme="@style/ActionBarTheme"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    app:titleTextColor="?android:attr/textColorPrimaryInverse"
    tools:showIn="@layout/activity_active_rewards_rewardslist">

    <TextView
        android:id="@+id/toolbar_title"
        style="@style/TextAppearance.AppCompat.Title.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:drawableEnd="@drawable/arrow_drop_down"
        android:gravity="center_vertical"
        android:text="All Points"
        android:visibility="gone" />

</android.support.v7.widget.Toolbar>
