...
        <item
            android:id="@+id/navigation_item_my_health"
            android:icon="@drawable/navdrawer_my_health_selector"
            android:title="@string/menu_myhealth_button_7"
            app:actionLayout="@layout/menu_badge" />
        <item
            android:id="@+id/navigation_item_profile"
            android:icon="@drawable/navdrawer_profile_selector"
            android:title="@string/menu_profile_button_9"
            app:actionLayout="@layout/menu_badge" />
    </group>
    <group
        android:id="@+id/system_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_settings"
            android:icon="@drawable/navdrawer_settings_selector"
            android:title="@string/generic_settings_button_title_271" />
        <item
            android:id="@+id/navigation_item_rate_us"
            android:icon="@drawable/navdrawer_rate_us_selector"
            android:title="@string/generic_rate_us_button_title_575" />
...
