...
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/button_bar_gray" />

    <LinearLayout
        android:id="@+id/settings_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_touch_target_size"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        tools:ignore="UseCompoundDrawables">
...
